nav bar is transitioning on hover

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav class='nav-div'>
-        <span>Nav</span>
+        <span id='nav-title'>FancyNavBar</span>
     </nav>
     <div>
         <span>Display</span>
