flexed some boxes into submission with on hover effects

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 </head>
 <body>
     <nav class='nav-div'>
-        <span id='nav-title'>FancyNavBar</span>
+        <span id='nav-title'>Fancy NavBar</span>
     </nav>
-    <div>
-        <span>Display</span>
+    <div class='parent-box'>
+        <div class='children-boxes'>Beautiful Box</div>
+        <div class='children-boxes'>Lovely Box</div>
+        <div class='children-boxes'>Aesthetic Box</div>
     </div>
 </body>
 <footer>
