changed box colors

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <span id='nav-title'>Fancy NavBar</span>
     </nav>
     <div class='parent-box'>
-        <div class='children-boxes'>Beautiful Box</div>
-        <div class='children-boxes'>Lovely Box</div>
-        <div class='children-boxes'>Aesthetic Box</div>
+        <div class='children-boxes' id='box1'>Beautiful Box</div>
+        <div class='children-boxes' id='box2'>Lovely Box</div>
+        <div class='children-boxes' id='box3'>Aesthetic Box</div>
     </div>
 </body>
 <footer>
