added page for when box one is clicked on

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <span id='nav-title'>Fancy NavBar</span>
     </nav>
     <div class='parent-box'>
-        <div class='children-boxes' id='box1'>Beautiful Box</div>
+        <a href='surprise-one.html'><div class='children-boxes' id='box1'>Beautiful Box</div></a>
         <div class='children-boxes' id='box2'>Lovely Box</div>
         <div class='children-boxes' id='box3'>Aesthetic Box</div>
     </div>
