added link to go back to homepage

--- a/surprise-one.html
+++ b/surprise-one.html
@@ -11,5 +11,8 @@
         <span>SURPRISE!!! Cute doggo img for u</span>
     </div>
     <img src="https://images.pexels.com/photos/1663421/pexels-photo-1663421.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="cute-dog" height="500px"/>
+    <div>
+        <a href='index.html'><span>Back to home page</span></a>
+    </div>
 </body>
 </html>
