updated footer content and style

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     </nav>
     <div class='parent-box'>
         <a href='surprise-one.html'><div class='children-boxes' id='box1'>Beautiful Box</div></a>
-        <div class='children-boxes' id='box2'>Lovely Box</div>
+        <a href='surprise-two.html'><div class='children-boxes' id='box2'>Lovely Box</div></a>
         <div class='children-boxes' id='box3'>Aesthetic Box</div>
     </div>
 </body>
 <footer>
-
+    <span>Copywrited by myself. Much wow.</span>
 </footer>
 </html>
