added content to page 3

--- a/surprise-three.html
+++ b/surprise-three.html
@@ -7,6 +7,12 @@
     <title>Surprise!</title>
 </head>
 <body>
-    
+    <div>
+        <span>SURPRISE!!! Cute bunnie rabbit img for u</span>
+    </div>
+    <img src="https://images.pexels.com/photos/372166/pexels-photo-372166.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="bunny" height="500px"/>
+    <div>
+        <a href='index.html'><span>Back to home page</span></a>
+    </div>
 </body>
 </html>
