connected page three to index

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class='parent-box'>
         <a href='surprise-one.html'><div class='children-boxes' id='box1'>Beautiful Box</div></a>
         <a href='surprise-two.html'><div class='children-boxes' id='box2'>Lovely Box</div></a>
-        <div class='children-boxes' id='box3'>Aesthetic Box</div>
+        <a href='surprise-three.html'><div class='children-boxes' id='box3'>Aesthetic Box</div></a>
     </div>
 </body>
 <footer>
