removed text decoration from a tags

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <span id='nav-title'>Fancy NavBar</span>
     </nav>
     <div class='parent-box'>
-        <a href='surprise-one.html'><div class='children-boxes' id='box1'>Beautiful Box</div></a>
+        <a href='surprise-one.html'><div class='children-boxes' id='box1'><span>Beautiful Box</span></div></a>
         <a href='surprise-two.html'><div class='children-boxes' id='box2'>Lovely Box</div></a>
         <a href='surprise-three.html'><div class='children-boxes' id='box3'>Aesthetic Box</div></a>
     </div>
